newq and runq updated to consider readyq = qsize when run -> ready